# Simple_Mandelbrot

./: CMakeLists.txt  README.md  main.cpp
